Update environment configuration and refactor Redis connection setup

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,9 +1,15 @@
+NODE_ENV=development
+
 DB_HOST=localhost
 DB_PORT=5432
-DB_USER=postgres
-DB_PASS=example
-DB_NAME=events
+DB_USER=....
+DB_PASS=....
+DB_NAME=eventmonitor
+
 REDIS_HOST=localhost
 REDIS_PORT=6379
+
 OPENAI_API_KEY=
+
+NEWS_API_URL='https://newsapi.org/v2/everything'
 NEWS_API_KEY=
