--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "start:nodemon": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
